Update TDGraphReader.java
Downgrade the function to read from files in order support Java versions 8 and above